--- a/app/src/main/res/layout/activity_math_game.xml
+++ b/app/src/main/res/layout/activity_math_game.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Which Value is the Largest?"
+        android:text="@string/which_value_is_the_largest"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
