--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,106 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.csaper6.csaproject1_mini_games3dtictactoemrshorr2016.TicTacToe"
-    android:orientation="horizontal"
-    android:gravity="center">
+    tools:context="com.example.csaper6.csaproject1_mini_games3dtictactoemrshorr2016.tictactoe"
+    android:gravity="center" >
 
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ul"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="70dp" />
 
-</LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/um"
+        android:layout_alignTop="@+id/ul"
+        android:layout_toEndOf="@+id/ul" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mm"
+        android:layout_below="@+id/um"
+        android:layout_alignStart="@+id/um"
+        android:layout_marginTop="46dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ml"
+        android:layout_alignTop="@+id/mm"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ur"
+        android:layout_alignBottom="@+id/um"
+        android:layout_toEndOf="@+id/um" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mr"
+        android:layout_alignTop="@+id/mm"
+        android:layout_alignStart="@+id/ur" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dl"
+        android:layout_below="@+id/mm"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="47dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dm"
+        android:layout_alignBottom="@+id/dl"
+        android:layout_toStartOf="@+id/mr" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dr"
+        android:layout_alignBottom="@+id/dm"
+        android:layout_toEndOf="@+id/dm" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset"
+        android:id="@+id/reset"
+        android:layout_below="@+id/dl"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="54dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="X will Win"
+        android:id="@+id/x"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/ur" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="O Will Win"
+        android:id="@+id/o"
+        android:layout_alignBottom="@+id/x"
+        android:layout_toEndOf="@+id/x" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Score: "
+        android:id="@+id/score"
+        android:layout_alignTop="@+id/reset"
+        android:layout_alignParentEnd="true" />
+</RelativeLayout>
