--- a/app/src/main/res/layout/activity_coin_flip.xml
+++ b/app/src/main/res/layout/activity_coin_flip.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CoinFlip"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@drawable/coin0033">
 
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="300dp"
