--- a/app/src/main/res/layout/activity_menu_screen.xml
+++ b/app/src/main/res/layout/activity_menu_screen.xml
@@ -11,7 +11,8 @@
     tools:context="com.example.csaper6.csaproject1_mini_games3dtictactoemrshorr2016.MenuScreen"
     android:orientation="vertical"
     android:gravity="center"
-    >
+    android:background="@drawable/pacman_ios92_6">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
