--- a/app/src/main/res/layout/activity_math_game.xml
+++ b/app/src/main/res/layout/activity_math_game.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.example.csaper6.csaproject1_mini_games3dtictactoemrshorr2016.MathGame">
+    tools:context="com.example.csaper6.csaproject1_mini_games3dtictactoemrshorr2016.MathGame"
+    android:background="#ffbb00">
 
     <TextView
         android:layout_width="wrap_content"
