--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/chronometer10">
+    android:id="@+id/chronometer10"
+    android:background="#12aa22"
+    android:gravity="center">
 
     <Chronometer
         android:layout_width="wrap_content"
