--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -7,8 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.csaper6.csaproject1_mini_games3dtictactoemrshorr2016.tictactoe"
-    android:gravity="center" >
+    android:gravity="center"
+    android:background="#ff2b6b"
+    >
 
 
     <Button
