--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <item android:id="@+id/quit"
-            android:title="home"
-            android:icon="@drawable/home">
+    <item
+        android:id="@+id/quit"
+        android:icon="@drawable/home"
+        android:title="Home"
+        app:showAsAction="always"
+        android:orderInCategory="0"/>
 
-        </item>
 </menu>
